--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,13 +14,13 @@ navbar:
   left:
     - icon: fa-home fa-lg
       href: index.html
-    - text: "Get started"
+    - text: Get started
       href: articles/jfa.html
-    - text: "Vignettes"
+    - text: Vignettes
       href: articles/index.html
-    - text: "Functions"
+    - text: Functions
       href: reference/index.html
-    - text: "News"
+    - text: News
       href: news/index.html
   right:
    - icon: fa-github
@@ -34,42 +34,42 @@ home:
     href: https://github.com/koenderks/jfa/discussions
 
 articles:
-  - title: "Audit Sampling"
+  - title: Audit Sampling
     desc: >
       These vignettes provide an introduction to planning, selecting, and
       evaluating an audit sample compliant with international standards on
       auditing using the **jfa** package.
     contents:
-      - audit-sampling
-      - creating-prior
-      - sample-planning
-      - sample-selection
-      - sample-evaluation
-      - sample-evaluation-partial
-      - sampling-workflow
-      - bayesian-sampling-workflow
-  - title: "Data Auditing"
+      - articles/audit_sampling
+      - articles/creating_prior
+      - articles/sample_planning
+      - articles/sample_selection
+      - articles/sample_evaluation
+      - articles/sample_evaluation_partial
+      - articles/sampling_workflow
+      - articles/bayesian_sampling_workflow
+  - title: Data Auditing
     desc: >
       These vignettes provide an introduction to data auditing using the **jfa**
       package.
     contents:
-      - data-auditing
-      - digit-analysis
-  - title: "Algorithm Auditing"
+      - articles/data_auditing
+      - articles/digit_analysis
+  - title: Algorithm Auditing
     desc: >
       These vignettes provide an introduction to algorithm auditing using the **jfa**
       package.
     contents:
-      - algorithm-auditing
-      - model-fairness
+      - articles/algorithm_auditing
+      - articles/model_fairness
 
 reference:
-  - title: "Overview"
+  - title: Overview
     desc: >
       Package overview
     contents:
       - jfa-package
-  - title: "Audit sampling"
+  - title: Audit sampling
     desc: >
       Functions for planning, selecting, and evaluating audit samples compliant
       with international standards on auditing.
@@ -78,19 +78,19 @@ reference:
       - planning
       - selection
       - evaluation
-  - title: "Data auditing"
+  - title: Data auditing
     desc: >
       Functions for data auditing, such as testing the distribution of leading
       digits in a data set against Benford's law, and assessing repeated values.
     contents:
       - digit_test
       - repeated_test
-  - title: "Algorithm auditing"
+  - title: Algorithm auditing
     desc: >
       Functions for auditing the output of algorithms with respect to fairness.
     contents:
       - model_fairness
-  - title: "Data sets"
+  - title: Data sets
     desc: >
       Example data sets included in the **jfa** package.
     contents:
@@ -103,7 +103,7 @@ reference:
       - retailer
       - sanitizer
       - sinoForest
-  - title: "Miscellaneous"
+  - title: Miscellaneous
     desc: >
       Functions for working with output from the **jfa** package.
     contents:
