--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: jfa
 Title: Statistical Methods for Auditing
 Version: 0.7.2
-Date: 2024-04-29
+Date: 2024-05-30
 Authors@R:
     person(given = "Koen",
            family = "Derks",
@@ -18,8 +18,8 @@ Description: Provides statistical methods for auditing as implemented in JASP
     auditing algorithms on the aspect of fairness and bias. Next to classical
     statistical methodology, the package implements Bayesian equivalents of
     these methods whose statistical underpinnings are described in Derks et al.
-    (2021) <doi:10.1111/ijau.12240>, Derks et al. (2021)
-    <doi:10.31234/osf.io/kzqp5>, and Derks et al. (2022)
+    (2021) <doi:10.1111/ijau.12240>, Derks et al. (2024)
+    <doi:10.2308/AJPT-2021-086>, and Derks et al. (2022)
     <doi:10.31234/osf.io/8nf3e>.
 Depends:
     R (>= 3.5.0)
