--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,10 @@
 Package: jfa
 Title: Statistical Methods for Auditing
 Version: 0.7.3
-Date: 2024-08-23
-Authors@R:
-    person(given = "Koen",
-           family = "Derks",
-           role = c("aut", "cre"),
-           email = "k.derks@nyenrode.nl",
-           comment = c(ORCID = '0000-0002-5533-9349'))
+Date: 2024-09-17
+Authors@R: c(
+    person("Koen", "Derks", email = "k.derks@nyenrode.nl", role = c("aut", "cre"), comment = c(ORCID = '0000-0002-5533-9349'))
+    person("Lotte", "Mensink", email = "l.mensink@nyenrode.nl", role = "ctb", comment = c(ORCID = '0009-0001-8321-4690')))
 Description: Provides statistical methods for auditing as implemented in JASP
     for Audit (Derks et al., 2021 <doi:10.21105/joss.02733>). First, the package
     makes it easy for an auditor to plan a statistical sample, select the sample
@@ -19,8 +16,8 @@ Description: Provides statistical methods for auditing as implemented in JASP
     statistical methodology, the package implements Bayesian equivalents of
     these methods whose statistical underpinnings are described in Derks et al.
     (2021) <doi:10.1111/ijau.12240>, Derks et al. (2024)
-    <doi:10.2308/AJPT-2021-086>, and Derks et al. (2022)
-    <doi:10.31234/osf.io/8nf3e>.
+    <doi:10.2308/AJPT-2021-086>, Derks et al. (2022) <doi:10.31234/osf.io/8nf3e>
+    and Derks et al. (2024) <doi:10.31234/osf.io/tgq5z>.
 Depends:
     R (>= 3.5.0)
 Imports:
