--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,11 @@ Title: Statistical Methods for Auditing
 Version: 0.7.3
 Date: 2024-09-17
 Authors@R: c(
-    person("Koen", "Derks", email = "k.derks@nyenrode.nl", role = c("aut", "cre"), comment = c(ORCID = '0000-0002-5533-9349'))
-    person("Lotte", "Mensink", email = "l.mensink@nyenrode.nl", role = "ctb", comment = c(ORCID = '0009-0001-8321-4690')))
+    person("Koen", "Derks", email = "k.derks@nyenrode.nl", role = c("aut", "cre"),
+           comment = c(ORCID = '0000-0002-5533-9349')),
+    person("Lotte", "Mensink", email = "l.mensink@nyenrode.nl", role = "ctb",
+           comment = c(ORCID = '0009-0001-8321-4690'))
+  )
 Description: Provides statistical methods for auditing as implemented in JASP
     for Audit (Derks et al., 2021 <doi:10.21105/joss.02733>). First, the package
     makes it easy for an auditor to plan a statistical sample, select the sample
