--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(summary,jfaSelection)
 export(auditPrior)
 export(digit_test)
 export(evaluation)
+export(fairness_measure_workflow)
 export(model_fairness)
 export(planning)
 export(repeated_test)
