print function and plot adjustment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(predict,jfaPrior)
 S3method(print,jfaDistr)
 S3method(print,jfaEvaluation)
 S3method(print,jfaFairness)
+S3method(print,jfaFairnessSelection)
 S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
 S3method(print,jfaPredict)
