--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,jfaDistr)
 S3method(plot,jfaEvaluation)
 S3method(plot,jfaFairness)
+S3method(plot,jfaFairnessSelection)
 S3method(plot,jfaPlanning)
 S3method(plot,jfaPosterior)
 S3method(plot,jfaPredict)
@@ -13,6 +14,7 @@ S3method(predict,jfaPrior)
 S3method(print,jfaDistr)
 S3method(print,jfaEvaluation)
 S3method(print,jfaFairness)
+S3method(print,jfaFairnessSelection)
 S3method(print,jfaPlanning)
 S3method(print,jfaPosterior)
 S3method(print,jfaPredict)
@@ -36,6 +38,7 @@ S3method(summary,jfaSelection)
 export(auditPrior)
 export(digit_test)
 export(evaluation)
+export(fairness_selection)
 export(model_fairness)
 export(planning)
 export(repeated_test)
