--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
     person("Koen", "Derks", email = "k.derks@nyenrode.nl", role = c("aut", "cre"),
            comment = c(ORCID = '0000-0002-5533-9349')),
     person("Lotte", "Mensink", email = "l.mensink@nyenrode.nl", role = "ctb",
-           comment = c(ORCID = '0009-0001-8321-4690'),
+           comment = c(ORCID = '0009-0001-8321-4690')),
     person("Federica", "Picogna", email = "f.picogna@nyenrode.nl", role = "ctb")
   )
 Description: Provides statistical methods for auditing as implemented in JASP
